--- a/fitness-tracker-v2/apps/web/package.json
+++ b/fitness-tracker-v2/apps/web/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.0",
     "react-router-dom": "^6.23.0",
     "@tanstack/react-query": "^5.40.0",
+    "@tanstack/react-query-devtools": "^5.40.0",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
     "react-hook-form": "^7.51.0",
