--- a/fitness-tracker-v2/apps/web/package.json
+++ b/fitness-tracker-v2/apps/web/package.json
@@ -6,6 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext ts,tsx",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -13,43 +16,47 @@
     "test:run": "vitest run",
     "test:unit": "vitest run src/**/*.test.{ts,tsx}",
     "test:component": "vitest run src/**/*.test.tsx",
-    "test:integration": "vitest run src/**/*.integration.test.{ts,tsx}"
+    "test:integration": "vitest run src/**/*.integration.test.{ts,tsx}",
+    "test:e2e": "playwright test"
   },
   "dependencies": {
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "react-router-dom": "^6.23.0",
+    "@hookform/resolvers": "^3.3.0",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-devtools": "^5.40.0",
     "@trpc/client": "^10.45.0",
     "@trpc/react-query": "^10.45.0",
-    "react-hook-form": "^7.51.0",
-    "zod": "^3.23.0",
-    "@hookform/resolvers": "^3.3.0",
     "firebase": "^10.12.0",
     "lucide-react": "^0.378.0",
-    "recharts": "^2.12.0"
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-hook-form": "^7.51.0",
+    "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.0",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "vite": "^5.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0",
-    "typescript": "^5.5.0",
-    "vitest": "^1.0.0",
-    "@vitest/ui": "^1.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/jest-dom": "^6.0.0",
-    "@testing-library/user-event": "^14.0.0",
-    "jsdom": "^23.0.0",
-    "eslint": "^8.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "@vitest/ui": "^1.0.0",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.0.0",
-    "eslint-plugin-react-hooks": "^4.0.0"
+    "eslint-plugin-react-hooks": "^4.0.0",
+    "jsdom": "^23.0.0",
+    "postcss": "^8.4.0",
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.5.0",
+    "vite": "^5.2.0",
+    "vitest": "^1.0.0"
   }
 }
