--- a/fitness-tracker-v2/apps/web/package.json
+++ b/fitness-tracker-v2/apps/web/package.json
@@ -11,7 +11,8 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
+    "test:coverage:watch": "vitest watch --coverage",
     "test:watch": "vitest --watch",
     "test:run": "vitest run",
     "test:unit": "vitest run src/**/*.test.{ts,tsx}",
