--- a/fitness-tracker-v2/apps/web/package.json
+++ b/fitness-tracker-v2/apps/web/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.0",
+    "@sentry/react": "^10.22.0",
+    "@sentry/tracing": "^7.120.4",
     "@tanstack/react-query": "^5.40.0",
     "@tanstack/react-query-devtools": "^5.40.0",
     "@trpc/client": "^10.45.0",
@@ -36,6 +38,7 @@
     "zod": "^3.23.0"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.11.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
@@ -52,10 +55,12 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.0.0",
     "eslint-plugin-react-hooks": "^4.0.0",
+    "jest-axe": "^10.0.0",
     "jsdom": "^23.0.0",
     "postcss": "^8.4.0",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.0",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.0",
     "vite": "^5.2.0",
     "vitest": "^1.0.0"
