--- a/fitness-tracker-v2/.github/dependabot.yml
+++ b/fitness-tracker-v2/.github/dependabot.yml
@@ -1,126 +1,11 @@
 version: 2
 updates:
-  # Frontend dependencies
   - package-ecosystem: "npm"
-    directory: "/apps/web"
+    directory: "/"
     schedule:
       interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "frontend"
-      - "automated"
-    commit-message:
-      prefix: "chore"
-      prefix-development: "chore"
-      include: "scope"
+    open-pull-requests-limit: 10
     reviewers:
-      - "tech-team"
-    groups:
-      dev-dependencies:
-        patterns:
-          - "@*/*"
-          - "eslint*"
-          - "prettier*"
-          - "@types/*"
-          - "vitest*"
-          - "@testing-library/*"
-        update-types:
-          - "minor"
-          - "patch"
-      production-dependencies:
-        patterns:
-          - "react*"
-          - "react-*"
-          - "@tanstack/*"
-          - "zod"
-          - "firebase"
-        update-types:
-          - "patch"
-
-  # Backend dependencies
-  - package-ecosystem: "npm"
-    directory: "/functions"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "backend"
-      - "automated"
+      - "your-github-username"
     commit-message:
-      prefix: "chore"
-      prefix-development: "chore"
-      include: "scope"
-    groups:
-      dev-dependencies:
-        patterns:
-          - "@*/*"
-          - "@types/*"
-          - "prisma"
-        update-types:
-          - "minor"
-          - "patch"
-      production-dependencies:
-        patterns:
-          - "express"
-          - "helmet"
-          - "cors"
-          - "compression"
-        update-types:
-          - "patch"
-
-  # E2E dependencies
-  - package-ecosystem: "npm"
-    directory: "/e2e"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "e2e"
-      - "automated"
-
-  # Root dependencies
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    open-pull-requests-limit: 5
-    labels:
-      - "dependencies"
-      - "root"
-      - "automated"
-
-  # GitHub Actions
-  - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    labels:
-      - "ci/cd"
-      - "github-actions"
-      - "automated"
-
-  # Docker
-  - package-ecosystem: "docker"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-      day: "monday"
-      time: "09:00"
-    labels:
-      - "docker"
-      - "automated"
-
-
+      prefix: "chore(deps)"
